--- a/EnergyManagementApp/app/build.gradle
+++ b/EnergyManagementApp/app/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.prolificinteractive:material-calendarview:1.6.1'
+    implementation 'com.google.android.material:material:1.2.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
