--- a/EnergyManagementApp/app/src/main/AndroidManifest.xml
+++ b/EnergyManagementApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.energymanagementapp" >
+    package="com.example.energymanagementapp">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EnergyManagementApp" >
+        android:theme="@style/Theme.EnergyManagementApp">
+        <activity
+            android:name=".manageEfficiency.PanelManagementActivity"
+            android:exported="false" />
         <activity
             android:name=".LandingPageActivity"
             android:exported="false"
@@ -19,7 +22,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
