--- a/EnergyManagementApp/app/src/main/AndroidManifest.xml
+++ b/EnergyManagementApp/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EnergyManagementApp">
         <activity
+            android:name=".turnOnOff.TurnOnOffActivity"
+            android:exported="false" />
+        <activity
             android:name=".energySource.EnergySourceActivity"
             android:exported="false" />
         <activity
