--- a/EnergyManagementApp/app/build.gradle
+++ b/EnergyManagementApp/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
